Fri Apr 15 13:48:06 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* include/ctlib.h include/dblib.h include/tds.h:
	* include/tdsconvert.h src/apps/tsql.c src/ctlib/cs.c:
	* src/ctlib/ctutil.c src/dblib/dblib.c src/dblib/dbutil.c:
	* src/odbc/odbc.c src/pool/member.c src/server/login.c:
	* src/tds/convert.c src/tds/mem.c src/tds/token.c:
	* src/tds/util.c:
	- TDSCONTEXT constification
	- removed tds_ctx_set_parent/tds_ctx_get_parent
	- add parent argument to tds_alloc_context
	

Thu Apr 14 13:33:14 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/apps/tsql.c: check proper result type for rows
	* include/tds.h src/dblib/dblib.c src/odbc/odbc.c:
	* src/tds/token.c:
	- removed tds_process_trailing_tokens
	* src/tds/unittests/t0005.c src/tds/unittests/t0006.c:
	* src/tds/unittests/utf8_1.c:
	- remove warnings

Thu Apr 14 13:33:14 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* NEWS include/tds.h src/apps/tsql.c src/ctlib/blk.c:
	* src/ctlib/ct.c src/dblib/bcp.c src/dblib/dblib.c:
	* src/odbc/odbc.c src/tds/token.c src/tds/example/token1.c:
	* src/tds/example/token2.c src/tds/unittests/common.c:
	* src/tds/unittests/dataread.c src/tds/unittests/dynamic1.c:
	* src/tds/unittests/flags.c src/tds/unittests/t0002.c:
	* src/tds/unittests/t0004.c src/tds/unittests/t0005.c:
	* src/tds/unittests/t0006.c src/tds/unittests/utf8_1.c:
	* src/tds/unittests/utf8_2.c src/tds/unittests/utf8_3.c:
	- reuse new tds_process_tokens
	* src/odbc/unittests/moreandcount.c: more verbose

Wed Apr 13 18:20:57 EDT 2005	JK Lowden <jklowden@schemamania.org>
	* src/dblib/dblib.c src/dblib/unittests/t0002.c
	- fixed dbclrbuf, probably.  dbgetrow is broken.

Wed Apr 13 13:44:58 EDT 2005	JK Lowden <jklowden@schemamania.org>
	* src/dblib/unittests/t0002.c 
	- changed to test multiple resultsets. 
	- test works: buffering is broken.  

Wed Apr 13 13:44:58 EDT 2005	JK Lowden <jklowden@schemamania.org>
	* src/dblib/unittests/t0002.c cleanup, no functional change
